重構訂單模組為整批更新模式
包含以下變更：
- 將 OrderItem 改為 JPA Single Table Inheritance (STI) 策略
- 新增 SingleOrderItem, ComboOrderItem, ComboItemOrderItem 子類
- API 改為整批更新模式：新增 /update, /delete 端點
- 移除逐項操作端點 (/items/add, /items/update, /items/remove)
- CreateOrderRequest 支援一次建立訂單並加入所有項目
- 新增 OrderItemRequest, UpdateOrderRequest DTO
- 簡化 OrderItemRepository 查詢方法
- 更新測試配合新架構

🤖 Generated with [Claude Code](https://claude.com/claude-code)